[gd_scene load_steps=75 format=2]

[ext_resource path="res://Resources/Skeleton Sprite Pack/Skeleton Walk.png" type="Texture" id=1]
[ext_resource path="res://Resources/Skeleton Sprite Pack/Skeleton Idle.png" type="Texture" id=2]
[ext_resource path="res://EnemySkeleton.gd" type="Script" id=3]
[ext_resource path="res://Resources/Skeleton Sprite Pack/Skeleton Attack.png" type="Texture" id=4]
[ext_resource path="res://Resources/Skeleton Sprite Pack/Skeleton Dead.png" type="Texture" id=5]
[ext_resource path="res://Resources/Skeleton Sprite Pack/Skeleton Hit.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.39279
height = 7.88301

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 33, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 66, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 99, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 132, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 165, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 198, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 231, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 264, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 297, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 330, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 363, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 396, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 429, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 462, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 72, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 120, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 168, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 216, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 43, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 86, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 129, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 172, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 215, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 258, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 301, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 344, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 387, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 430, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 473, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 516, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 559, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 602, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 645, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 688, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 731, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 30, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 60, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 90, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 120, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 150, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 180, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 210, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 22, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 44, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 66, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 88, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 110, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 132, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 154, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 176, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 198, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 220, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 242, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 264, 0, 22, 33 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "DEAD",
"speed": 12.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "IDLE",
"speed": 12.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": true,
"name": "ATTACK",
"speed": 12.0
}, {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ) ],
"loop": true,
"name": "HIT",
"speed": 5.0
}, {
"frames": [ SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ) ],
"loop": true,
"name": "WALK",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=68]
extents = Vector2( 6.0965, 4.88944 )

[node name="EnemySkeleton2D" type="Node2D"]

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( -0.353157, -16.4217 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( -0.176575, 3.70812 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
position = Vector2( 3.17122, 0 )
frames = SubResource( 2 )
animation = "ATTACK"
frame = 8
playing = true

[node name="DownRay" type="RayCast2D" parent="KinematicBody2D"]
position = Vector2( 9.18201, 0.529732 )
enabled = true

[node name="RightRay" type="RayCast2D" parent="KinematicBody2D"]
position = Vector2( 9.18201, 3.17839 )
enabled = true
cast_to = Vector2( 10, 0 )
collision_mask = 3

[node name="Area2D" type="Area2D" parent="KinematicBody2D"]
collision_layer = 4
collision_mask = 2

[node name="HitBox" type="CollisionShape2D" parent="KinematicBody2D/Area2D"]
position = Vector2( 17.1616, 11.8377 )
shape = SubResource( 68 )
disabled = true

[connection signal="frame_changed" from="KinematicBody2D/AnimatedSprite" to="KinematicBody2D" method="_on_AnimatedSprite_frame_changed"]
[connection signal="body_entered" from="KinematicBody2D/Area2D" to="KinematicBody2D" method="_on_Area2D_body_entered"]
